<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/item_orders"
            android:title="@string/myorders"
            android:icon="@mipmap/ordericon"/>

    <!--    <item
            android:id="@+id/item_rewards"
            android:visible="false"
            android:title="@string/myrewards"
            android:icon="@mipmap/rewardicon"/>-->

        <item
            android:id="@+id/item_delivered"
            android:title="@string/deliveredorders"
            android:icon="@mipmap/deliveredicon"/>

        <item
            android:id="@+id/item_changepassword"
            android:title="@string/changepassword"
            android:icon="@drawable/ic_lockicon"/>

        <item
            android:id="@+id/item_profile"
            android:icon="@mipmap/profileicon"
            android:title="@string/myprofile"/>

        <item
            android:id="@+id/item_logout"
            android:title="@string/logout"
            android:icon="@mipmap/logouticon"/>

    </group>

</menu>